# JARVIS-AnnotationTool

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  config.yaml  globals.hpp  main.cpp  setup.bat  setup.sh
AnnotationTool_0.3-1_amd64/DEBIAN/: control
AnnotationTool_0.3-1_amd64_1804/DEBIAN/: control
AnnotationTool_0.3-1_amd64_2004/DEBIAN/: control
IconThemes/DarkIconTheme/: resize.py
deployment/: deploy_Ubuntu_1804.sh  deploy_Ubuntu_2004.sh  deploy_Ubuntu_2204.sh
deployment/deb_packages/: change_rpath.sh
deployment/deb_packages/AnnotationTool_0.3-1_amd64_1804/DEBIAN/: control
deployment/deb_packages/AnnotationTool_0.3-1_amd64_2004/DEBIAN/: control
deployment/deb_packages/JARVIS-AnnotationTool_0.3-1_amd64_1804/DEBIAN/: control
deployment/deb_packages/JARVIS-AnnotationTool_0.3-1_amd64_2004/DEBIAN/: control
deployment/deb_packages/JARVIS-AnnotationTool_1.1-1_amd64_1804/DEBIAN/: control
deployment/deb_packages/JARVIS-AnnotationTool_1.1-1_amd64_2004/DEBIAN/: control
deployment/deb_packages/JARVIS-AnnotationTool_1.2-1_amd64_1804/DEBIAN/: control
docs/: Build_Instructions_Linux.txt  Build_Instructions_MacOS.txt  Build_Instructions_Windows.txt
gui/: .atom-beautify.loaddatasetwindow.cpp  .atom-beautify.loaddatasetwindow.hpp  CMakeLists.txt  configurableitemlist.cpp  configurableitemlist.hpp  editorwidget.cpp  editorwidget.hpp  imageviewer.cpp  imageviewer.hpp  keypointwidget.cpp  loaddatasetwindow.cpp  loaddatasetwindow.hpp  mainbar.cpp  mainbar.hpp  mainwindow.cpp  mainwindow.hpp  newdatasetwindow.cpp  newdatasetwindow.hpp  presetswindow.cpp  presetswindow.hpp  rangeslider (copy).cpp  rangeslider (copy).hpp  rangeslider.cpp  rangeslider.hpp  reprojectionchartview.hpp  reprojectionchartwidget.cpp  reprojectionwidget.cpp  reprojectionwidget.hpp  settingswindow.cpp  settingswindow.hpp  videocutterwindow.cpp  videocutterwindow.hpp
gui/Qt-DarkStyle/: CMakeLists.txt  DarkStyle.cpp
gui/Qt-DarkStyle/darkstyle/: darkstyle.qss
gui/conveniencewidgets/: CMakeLists.txt  checkableitemlist.cpp  checkableitemlist.hpp  configurableitemlist.cpp  configurableitemlist.hpp  labelwithtooltip.cpp  labelwithtooltip.hpp  pathwidget.cpp  pathwidget.hpp  presetswindow.cpp  presetswindow.hpp  spoiler.cpp  spoiler.hpp  switch.cpp  switch.hpp  yesnoradiowidget.cpp  yesnoradiowidget.hpp
gui/editor/: CMakeLists.txt  bonelengthchartview.cpp  bonelengthchartview.hpp  bonelengthchartwidget.cpp  bonelengthchartwidget.hpp  datasetcontrolwidget.cpp  datasetcontrolwidget.hpp  editorwidget.cpp  editorwidget.hpp  imageviewer.cpp  imageviewer.hpp  keypointwidget.cpp  keypointwidget.hpp  loaddatasetwindow.cpp  loaddatasetwindow.hpp  reprojectionchartview.cpp  reprojectionchartview.hpp  reprojectionchartwidget.cpp  reprojectionchartwidget.hpp  reprojectionwidget.cpp  reprojectionwidget.hpp
gui/editor/visualizationwindow/: CMakeLists.txt  bettercameracontroller.cpp  bettercameracontroller.hpp  controldock.cpp  controldock.hpp  viewport.cpp  viewport.hpp  vistoolbar.cpp  vistoolbar.hpp  visualizationwindow.cpp  visualizationwindow.hpp
gui/exportdatasetwidget/: CMakeLists.txt  exportdatasetwidget.cpp  exportdatasetwidget.hpp
gui/exporttrainingsetwidget/: CMakeLists.txt  annotationstatisticschartview.cpp  annotationstatisticschartview.hpp  compositionchartview.cpp  compositionchartview.hpp  datasetlist.cpp  datasetlist.hpp  exporttrainingsetwidget.cpp  exporttrainingsetwidget.hpp  segmentselectorwindow.cpp  segmentselectorwindow.hpp  trainingsetprogressinfowindow.cpp  trainingsetprogressinfowindow.hpp
gui/helpwindow/: CMakeLists.txt  helpwindow.cpp  helpwindow.hpp
gui/newcalibrationwidget/: CMakeLists.txt  calibrationchartview.cpp  calibrationchartview.hpp  calibrationprogressinfowindow.cpp  calibrationprogressinfowindow.hpp  calibrationstatisticswindow.cpp  calibrationstatisticswindow.hpp  cameranameslist.cpp  cameranameslist.hpp  extrinsicspairlist.cpp  extrinsicspairlist.hpp  namesuggestiondialog.cpp  namesuggestiondialog.hpp  newcalibrationwidget.cpp  newcalibrationwidget.hpp  paircreatorwindow.cpp  paircreatorwindow.hpp
gui/newdatasetwindow/: CMakeLists.txt  configurableitemlist.cpp  configurableitemlist.hpp  datasetprogressinfowindow.cpp  datasetprogressinfowindow.hpp  newdatasetwindow.cpp  newdatasetwindow.hpp  progressinfowindow.cpp  progressinfowindow.hpp  recordingstable.cpp  recordingstable.hpp  skeletontablewidget.cpp  skeletontablewidget.hpp
gui/newdatasetwindow/videocutter/: CMakeLists.txt  rangeslider.cpp  rangeslider.hpp  timeline.cpp  timeline.hpp  videocutterwindow.cpp  videocutterwindow.hpp
gui/videocutter/: rangeslider.cpp  videocutterwindow.cpp  videocutterwindow.hpp
help/: createcalibration.html  introduction.html  recordingcalibration.html
libs/: CMakeLists.txt
libs/OpenCV_4.5.1/Ubuntu_1804/: change_rpath.sh
libs/OpenCV_4.5.1/Ubuntu_2004/: change_rpath.sh
libs/OpenCV_4.5.1/Windows/: OpenCVConfig.cmake  setup_vars_opencv4.cmd
libs/Windows/opencv_static/: OpenCVConfig.cmake  setup_vars_opencv4.cmd
nsis/: installer_script.nsi
src/: CMakeLists.txt  colormap.cpp  colormap.hpp  configreader.cpp  configreader.hpp  dataset.cpp  dataset.hpp  datasetcreator.cpp  datasetcreator.hpp  keypoint.cpp  keypoint.hpp  reprojectiontool.cpp  reprojectiontool.hpp
src/calibrationtool/: CMakeLists.txt  calibrationtool.cpp  calibrationtool.hpp  extrinsicscalibrator.cpp  extrinsicscalibrator.hpp  intrinsicscalibrator.cpp  intrinsicscalibrator.hpp
src/calibrationtool/graphcompleter/: CMakeLists.txt  README.md  runtests.bat
src/calibrationtool/graphcompleter/src/: graphcompleter.cpp  graphcompleter.hpp
src/calibrationtool/graphcompleter/test/cpp/: csvtest0.cpp  csvtest1.cpp  csvtest2.cpp  csvtest3.cpp  csvtest4.cpp  csvtest5.cpp  csvtest6.cpp
src/calibrationtool/graphcompleter/test/py/: generateTestCases.py
src/datasetcreator/: CMakeLists.txt  datasetcreator.cpp  datasetcreator.hpp  imagewriter.cpp  imagewriter.hpp  videostreamer.cpp  videostreamer.hpp
src/trainingsetexporter/: CMakeLists.txt  trainingsetexporter.cpp  trainingsetexporter.hpp
(+2977 files in other folders)
