add_library(conveniencewidgets
  labelwithtooltip.hpp
  labelwithtooltip.cpp
  pathwidget.hpp
  pathwidget.cpp
  configurableitemlist.hpp
  configurableitemlist.cpp
  checkableitemlist.hpp
  checkableitemlist.cpp
  presetswindow.hpp
  presetswindow.cpp
  switch.hpp
  switch.cpp
  yesnoradiowidget.hpp
  yesnoradiowidget.cpp
  spoiler.hpp
  spoiler.cpp
)

target_include_directories(conveniencewidgets
    PUBLIC
    ${PROJECT_SOURCE_DIR}
    ../
)

target_link_libraries(conveniencewidgets
  Qt::Widgets
	src
)
