add_library(newcalibrationwidget
  newcalibrationwidget.hpp
  newcalibrationwidget.cpp
  extrinsicspairlist.hpp
  extrinsicspairlist.cpp
  paircreatorwindow.hpp
  paircreatorwindow.cpp
  calibrationprogressinfowindow.hpp
  calibrationprogressinfowindow.cpp
  calibrationstatisticswindow.hpp
  calibrationstatisticswindow.cpp
  calibrationchartview.hpp
  calibrationchartview.cpp
  namesuggestiondialog.hpp
  namesuggestiondialog.cpp
	cameranameslist.hpp
	cameranameslist.cpp
)

target_include_directories(newcalibrationwidget
    PUBLIC
    ${PROJECT_SOURCE_DIR}
    ../
    ${PROJECT_SOURCE_DIR}/src/calibrationtool
)

target_link_libraries(newcalibrationwidget
  Qt::Widgets
	src
  gui
  calibrationtool
)
